fixing spacing and otp

--- a/src/app/login/page.module.css
+++ b/src/app/login/page.module.css
@@ -10,9 +10,9 @@
   align-self: center;
 }
 
-.emailInput,
-.passwordInput {
+.emailInput {
   margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 
 .logoImg {
